# DebetManager

./: .gitignore  Debtbook_1.0.1_x64-setup.exe.sig  Final.html  README.md  latest.json  package-lock.json  package.json
.github/workflows/: release.yml
app/: index.html
license-server/: README.md  package-lock.json  package.json  server.js
local-license-server/: README.md  package-lock.json  package.json  server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
