[package]
name = "debtbook"
version = "1.0.1"
description = "Debtbook desktop app"
authors = ["Debet Final"]
edition = "2021"

[lib]
name = "debtbook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
